Add day and night mode.

--- a/app/src/main/res/layout/content_base.xml
+++ b/app/src/main/res/layout/content_base.xml
@@ -8,6 +8,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:id="@+id/baseContainer"
     tools:showIn="@layout/activity_base"
-    tools:context=".BaseActivity">
+    tools:context=".base.BaseActivity">
 
 </FrameLayout>
