--- a/app/src/main/res/layout/activity_switch.xml
+++ b/app/src/main/res/layout/activity_switch.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SwitchActivity">
+    tools:context=".activities.SwitchActivity">
 
     <RadioGroup
         android:id="@+id/rbGroup"
@@ -53,5 +53,53 @@
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:text="@string/rb_japanese"/>
+    </RadioGroup>
+
+    <RadioGroup
+        android:id="@+id/rbThemeGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rbGroup">
+
+        <RadioButton
+            android:id="@+id/rbThemeAuto"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:text="@string/rb_auto"/>
+
+        <RadioButton
+            android:id="@+id/rbDay"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:text="@string/rb_day"/>
+
+        <RadioButton
+            android:id="@+id/rbNight"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:text="@string/rb_night"/>
+
+        <RadioButton
+            android:id="@+id/rbCustom"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:text="@string/rb_custom"/>
     </RadioGroup>
 </android.support.constraint.ConstraintLayout>
