--- a/app/src/main/res/layout/activity_switch.xml
+++ b/app/src/main/res/layout/activity_switch.xml
@@ -12,11 +12,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tvLanguage">
 
         <RadioButton
             android:id="@+id/rbAuto"
@@ -59,12 +58,11 @@
         android:id="@+id/rbThemeGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rbGroup">
+        app:layout_constraintTop_toBottomOf="@+id/tvTheme">
 
         <RadioButton
             android:id="@+id/rbThemeAuto"
@@ -102,4 +100,30 @@
             android:background="@android:color/holo_orange_light"
             android:text="@string/rb_custom"/>
     </RadioGroup>
+
+    <TextView
+        android:text="@string/language"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvLanguage"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        android:padding="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:text="@string/theme"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvTheme"
+        app:layout_constraintTop_toBottomOf="@+id/rbGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        android:padding="8dp"
+        android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
